--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -1,24 +1,28 @@
 ---
 layout: default
 ---
+<div class="content">
 
-<div class="row">
-<div class="large-12 columns">
-<h1>{{ page.title }}</h1>
+  <div class="intro">
+    <h1 id="fittext">{{ page.title }}</h1>
+  </div>
 
-<p>
-{{ content }}
-</p>
-<p>{{ page.date | date: "%d.%m.%Y"}}</p>
+  <p>
+  {{ content }}
+  </p>
 
-<ul>
-  <li><a href="#"><i class="icon-play"></i></a></li>
-<li><a class="icon-cloud-download" href="{{ page.mp3 }}"></a></li>
-<li><a class="icon-share" href="#"></a></li>
-</ul>
+  <p class="datum">{{ page.date | date: "%d.%m.%Y"}}</p>
+
+
+  <ul class="actions">
+    <li><a href="#">play <span>05:32</span></a></li>
+    <li><a href="{{ page.mp3 }}">download</a></li>
+    <li><a href="#">share</a></li>
+  </ul>
 
 </div>
-</div>
+
+<div class="prevnext">
 
 {% for post in site.categories.audio %}
         {% if post.url == page.url %}
@@ -36,8 +40,15 @@ layout: default
     {% endfor %}
     {% if next_post %}
     <a  class="next" href="{{ next_post }}"><i class="icon-chevron-left"></i></a>
+    {% else %}
+    <a  class="next" href="{{ site.categories.audio.last.url }}"><i class="icon-chevron-left"></i></a>
     {% endif %}
     {% if prev_post %}
     <a class="prev" href="{{ prev_post }}"><i class="icon-chevron-right"></i></a>
+    {% else %}
+    <a class="prev" href="{{ site.categories.audio.first.url }}"><i class="icon-chevron-right"></i></a>
     {% endif %}
 
+</div>
+
+ <audio src="/mp3/{{ page.file }}" preload="none"></audio>
