--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/font-awesome-social.css" />
   <link rel="stylesheet" href="/css/main.css" />
   <script src="/js/vendor/custom.modernizr.js"></script>
+  <script src="/js/vendor/MinFaker.js"></script>
   <style>
     body{
       background-image: url(/img/out/{{ page.background }});
@@ -21,8 +22,9 @@
  {% include header.html %}
       {{ content }}
  {% include footer.html %}
-  <!--<script src="/js/vendor/jquery.js"></script>-->
-  <!--<script src="/audiojs/audio.min.js"></script>-->
-  <!--<script src="/js/main.js"></script>-->
+  <script src="/js/vendor/jquery.js"></script>
+  <script src="/js/vendor/jquery.fittext.js"></script>
+  <script src="/audiojs/audio.min.js"></script>
+  <script src="/js/main.js"></script>
   </body>
 </html>
