--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
   <ul>
-    <li><a mailto:"info@klangforscher.ch"><i class="icon-envelope-alt"></i></a></li>
-    <li><a href="http://soundcloud.com/klangforscher"><i class="icon-soundcloud"></i></a></li>
-    <li><a href="http://facebook.com/klangforscher"><i class="icon-facebook"></i></a></li>
+    <li><a href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
+    <li><a href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
+    <li><a href="http://facebook.com/klangforscher">Facebook</a></li>
   </ul>
 </footer>
 
