--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -1,29 +1,12 @@
 ---
 layout: default
 ---
-<div class="content">
-
-  <div class="intro">
-    <h1 id="fittext">{{ page.title }}</h1>
-  </div>
-
-  <p>
-  {{ content }}
-  </p>
-
-  <p class="datum">{{ page.date | date: "%d.%m.%Y"}}</p>
-
-
-  <ul class="actions">
-    <li><a href="#">play <span>05:32</span></a></li>
-    <li><a href="{{ page.mp3 }}">download</a></li>
-    <li><a href="#">share</a></li>
-  </ul>
-
+<div class="intro">
+  <h1 id="fittext">{{ page.title }}</h1>
 </div>
-
-<div class="prevnext">
-
+  <!--<p class="datum">{{ page.date | date: "%d.%m.%Y"}}</p>-->
+<div class="ui">
+  <ul class="actions">
 {% for post in site.categories.audio %}
         {% if post.url == page.url %}
             {% assign post_index0 = forloop.index0 %}
@@ -37,18 +20,38 @@ layout: default
         {% if post_index1 == forloop.index0 %}
             {% assign prev_post = post.url %}
         {% endif %}
-    {% endfor %}
+        {% endfor %}
+        <li>
     {% if next_post %}
-    <a  class="next" href="{{ next_post }}"><i class="icon-chevron-left"></i></a>
+    <a  class="next" href="{{ next_post }}">&larr; Back</a>
     {% else %}
-    <a  class="next" href="{{ site.categories.audio.last.url }}"><i class="icon-chevron-left"></i></a>
+    <a  class="next" href="{{ site.categories.audio.last.url }}">&larr; Back</a>
     {% endif %}
+    </li>
+    <li><a href="#">play</a></li>
+    <li>
     {% if prev_post %}
-    <a class="prev" href="{{ prev_post }}"><i class="icon-chevron-right"></i></a>
+    <a class="prev" href="{{ prev_post }}">Next &rarr;</a>
     {% else %}
-    <a class="prev" href="{{ site.categories.audio.first.url }}"><i class="icon-chevron-right"></i></a>
+    <a class="prev" href="{{ site.categories.audio.first.url }}">Next &rarr;</a>
     {% endif %}
-
+    </li>
+  </ul>
+</div>
+<div class="ui">
+  <ul class="second">
+    <li><a href="/mp3/{{ page.file }}">download</a></li>
+    <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fklangforscher.ch{{ page.url }}">Tweet</a></li>
+  </ul>
 </div>
 
- <audio src="/mp3/{{ page.file }}" preload="none"></audio>
+<div class="content">
+  {{ content }}
+</div>
+
+{% if page.file %}
+<audio src="/mp3/{{ page.file }}" preload="none"></audio>
+{% endif %}
+
+
+
