--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,10 @@
 <head>
 	<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Klangforscher</title>
-  <link rel="stylesheet" href="/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/css/font-awesome-social.css" />
+  <title>Klangforscher{% if page.title %} | {{page.title}}{% endif %}</title>
+  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}Klangforscher{% endif %}">
   <link rel="stylesheet" href="/css/main.css" />
   <script src="/js/vendor/custom.modernizr.js"></script>
-  <script src="/js/vendor/MinFaker.js"></script>
   <style>
     body{
       background-image: url(/img/out/{{ page.background }});
@@ -18,13 +16,12 @@
     a:hover{ color:{{ page.color }}!important; }
   </style>
 </head>
-<body>
- {% include header.html %}
+  <body>
+  {% include header.html %}
       {{ content }}
- {% include footer.html %}
-  <script src="/js/vendor/jquery.js"></script>
-  <script src="/js/vendor/jquery.fittext.js"></script>
+  {% include footer.html %}
   <script src="/audiojs/audio.min.js"></script>
+  <script src="/js/vendor/jquery.js"></script>
   <script src="/js/main.js"></script>
   </body>
 </html>
