--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
   <ul>
-    <li><a href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
-    <li><a href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
-    <li><a href="http://facebook.com/klangforscher">Facebook</a></li>
+    <li><a target="_blank" href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
+    <li><a target="_blank" href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
+    <li><a target="_blank" href="http://www.facebook.com/pages/Klangforscher/35528666658">Facebook</a></li>
   </ul>
 </footer>
 
