--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -23,17 +23,17 @@ layout: default
         {% endfor %}
         <li>
     {% if next_post %}
-    <a  class="next" href="{{ next_post }}">&larr; Back</a>
+    <a rel="next" class="next" href="{{ next_post }}">&larr; Back</a>
     {% else %}
-    <a  class="next" href="{{ site.categories.audio.last.url }}">&larr; Back</a>
+    <a rel="next" class="next" href="{{ site.categories.audio.last.url }}">&larr; Back</a>
     {% endif %}
     </li>
     <li><a href="#">play</a></li>
     <li>
     {% if prev_post %}
-    <a class="prev" href="{{ prev_post }}">Next &rarr;</a>
+    <a rel="prev" class="prev" href="{{ prev_post }}">Next &rarr;</a>
     {% else %}
-    <a class="prev" href="{{ site.categories.audio.first.url }}">Next &rarr;</a>
+    <a rel="prev" class="prev" href="{{ site.categories.audio.first.url }}">Next &rarr;</a>
     {% endif %}
     </li>
   </ul>
