--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,1 @@
-<header>
-    <a href="/" rel="home">
-      <hgroup>
-      <h1>Klangforscher</h1>
-      </hgroup>
-    </a>
-</header>
+<header><a href="/" rel="home"><hgroup><h1>Klangforscher</h1></hgroup></a></header>
