--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -1,41 +1,15 @@
 ---
 layout: default
 ---
-<div class="intro">
-  <h1 id="fittext">{{ page.title }}</h1>
-</div>
+<div class="intro"><h1 id="fittext">{{ page.title }}</h1></div>
   <!--<p class="datum">{{ page.date | date: "%d.%m.%Y"}}</p>-->
 <div class="ui">
   <ul class="actions">
-{% for post in site.categories.audio %}
-        {% if post.url == page.url %}
-            {% assign post_index0 = forloop.index0 %}
-            {% assign post_index1 = forloop.index %}
-        {% endif %}
-    {% endfor %}
-    {% for post in site.categories.audio %}
-        {% if post_index0 == forloop.index %}
-            {% assign next_post = post.url %}
-        {% endif %}
-        {% if post_index1 == forloop.index0 %}
-            {% assign prev_post = post.url %}
-        {% endif %}
-        {% endfor %}
-        <li>
-    {% if next_post %}
-    <a rel="next" class="next" href="{{ next_post }}">&larr; Back</a>
-    {% else %}
-    <a rel="next" class="next" href="{{ site.categories.audio.last.url }}">&larr; Back</a>
-    {% endif %}
-    </li>
+{% for post in site.categories.audio %} {% if post.url == page.url %} {% assign post_index0 = forloop.index0 %} {% assign post_index1 = forloop.index %} {% endif %} {% endfor %}
+{% for post in site.categories.audio %} {% if post_index0 == forloop.index %} {% assign next_post = post.url %} {% endif %} {% if post_index1 == forloop.index0 %} {% assign prev_post = post.url %} {% endif %} {% endfor %}
+    <li>{% if next_post %}<a rel="next" class="next" href="{{ next_post }}">&larr; Back</a>{% else %}<a rel="next" class="next" href="{{ site.categories.audio.last.url }}">&larr; Back</a>{% endif %}</li>
     <li><a id="playbtn" class="ispaused" href="#"></a></li>
-    <li>
-    {% if prev_post %}
-    <a rel="prev" class="prev" href="{{ prev_post }}">Next &rarr;</a>
-    {% else %}
-    <a rel="prev" class="prev" href="{{ site.categories.audio.first.url }}">Next &rarr;</a>
-    {% endif %}
-    </li>
+    <li>{% if prev_post %}<a rel="prev" class="prev" href="{{ prev_post }}">Next &rarr;</a>{% else %}<a rel="prev" class="prev" href="{{ site.categories.audio.first.url }}">Next &rarr;</a>{% endif %}</li>
   </ul>
 </div>
 <div class="ui">
@@ -44,14 +18,5 @@ layout: default
     <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fklangforscher.ch{{ page.url }}">Tweet</a></li>
   </ul>
 </div>
-
-<div class="content">
-  {{ content }}
-</div>
-
-{% if page.file %}
-<audio src="/mp3/{{ page.file }}" preload="none"></audio>
-{% endif %}
-
-
-
+<div class="content">{{ content }}</div>
+{% if page.file %}<audio src="/mp3/{{ page.file }}" preload="none"></audio>{% endif %}
