--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-	<meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>Klangforscher{% if page.title %} | {{page.title}}{% endif %}</title>
-  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}Klangforscher{% endif %}">
-  <link rel="stylesheet" href="/css/main.css" />
-  <script src="/js/vendor/custom.modernizr.js"></script>
-  <style>
-    body{
-      background-image: url(/img/out/{{ page.background }});
-      color:{{ page.color }}!important;
-    }
-    a{ color:{{ page.color }}!important; }
-    a:hover{ color:{{ page.color }}!important; }
-  </style>
-  {% if page.previous %}
-  <link rel="prefetch" href="/img/out/{{ page.previous.background }}" />
-  <link rel="prerender" href="/img/out/{{ page.previous.background }}" />
-  {% endif %}
-  {% if page.next %}
-  <link rel="prefetch" href="/img/out/{{ page.next.background }}" />
-  <link rel="prerender" href="/img/out/{{ page.next.background }}" />
-  {% endif %}
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width" />
+<title>Klangforscher{% if page.title %} | {{page.title}}{% endif %}</title>
+<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}Klangforscher{% endif %}">
+<link rel="stylesheet" href="/css/main.css" />
+<script src="/js/vendor/custom.modernizr.js"></script>
+<style>
+body{background-image: url(/img/out/{{ page.background }}); color:{{ page.color }}!important;}
+a{color:{{ page.color }}!important;}
+a:hover{color:{{ page.color }}!important;}
+</style>
+{% if page.previous %}<link rel="prefetch" href="/img/out/{{ page.previous.background }}" /><link rel="prerender" href="/img/out/{{ page.previous.background }}" />{% endif %}
+{% if page.next %}<link rel="prefetch" href="/img/out/{{ page.next.background }}" /><link rel="prerender" href="/img/out/{{ page.next.background }}" />{% endif %}
 </head>
-  <body>
-  {% include header.html %}
-      {{ content }}
-  {% include footer.html %}
-  <script src="/audiojs/audio.min.js"></script>
-  <script src="/js/vendor/jquery.js"></script>
-  <script src="/js/main.js"></script>
-  </body>
+<body>
+{% include header.html %}
+{{ content }}
+{% include footer.html %}
+<script src="/audiojs/audio.min.js"></script>
+<script src="/js/vendor/jquery.js"></script>
+<script src="/js/main.js"></script>
+</body>
 </html>
