--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ a:hover{color:{{ page.color }}!important;}
 {% include header.html %}
 {{ content }}
 {% include footer.html %}
-<script src="/audiojs/audio.min.js"></script>
+<script src="/js/audiojs/audio.min.js"></script>
 <script src="/js/vendor/jquery.js"></script>
 <script src="/js/main.js"></script>
 </body>
