--- a/css/main.sass
+++ b/css/main.sass
@@ -6,6 +6,10 @@ $font_path: "/fonts/simplon" !default
 +font-face("Simplon_BP_Medium", font-files("/fonts/simplon/woff/Simplon_BP_Medium_1.woff", woff, "/fonts/simplon/ttf/Simplon_BP_Medium_1.ttf", truetype, "/fonts/simplon/otf/Simplon_BP_Medium_1.otf", opentype), "#{$font_path}.eot", normal, bold)
 +font-face("Simplon_BP_Regular_Italic", font-files("/fonts/simplon/woff/Simplon_BP_Regular_Italic_1.woff", woff, "/fonts/simplon/ttf/Simplon_BP_Regular_Italic_1.ttf", truetype, "/fonts/simplon/otf/Simplon_BP_Regular_Italic_1.otf", opentype), "#{$font_path}.eot", normal, bold)
 +font-face("Simplon_BP_Mono_Regular", font-files("/fonts/simplon/woff/Simplon_BP_Mono_Regular_1.woff", woff, "/fonts/simplon/ttf/Simplon_BP_Mono_Regular_1.ttf", truetype, "/fonts/simplon/otf/Simplon_BP_Mono_Regular_1.otf", opentype), "#{$font_path}.eot", normal, bold)
+time
+  font-size: 14px
+  font-family: "Simplon_BP_Mono_Regular"
+  color: #333
 
 #lastupdate
   width: 100%
@@ -114,7 +118,7 @@ ul, li
     padding: 0px
     float: left
   li
-    font-size: 18px
+    font-size: 24px
     padding-top: 10px
     padding-bottom: 10px
   p
