--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@ a:hover{color:{{ page.color }}!important;}
 {% include header.html %}
 {{ content }}
 {% include footer.html %}
+<script src="/js/vendor/store+json2.min.js"></script>
 <script src="/js/audiojs/audio.min.js"></script>
 <script src="/js/vendor/jquery.js"></script>
 <script src="/js/main.js"></script>
