--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -6,9 +6,9 @@ layout: default
 <div class="ui">
   <ul class="actions">
     {% include prevnext.html %}
-    <li><a rel="next" class="next" href="{{ next_post }}">&larr; Back</a></li>
+    <li><a rel="next" class="next" href="{{ next_post }}">&larr; REW</a></li>
     <li><a id="playbtn" class="ispaused" href="#"></a></li>
-    <li><a rel="prev" class="prev" href="{{ prev_post }}">Next &rarr;</a></li>
+    <li><a rel="prev" class="prev" href="{{ prev_post }}">FWD &rarr;</a></li>
   </ul>
 </div>
 <div class="ui">
