--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@ a:hover{color:{{ page.color }}!important;}
 <script src="/js/vendor/store+json2.min.js"></script>
 <script src="/js/audiojs/audio.min.js"></script>
 <script src="/js/vendor/jquery.js"></script>
+<script src="/js/vendor/screenfull.min.js "></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
