--- a/css/main.sass
+++ b/css/main.sass
@@ -14,7 +14,12 @@ time
 
 
 i
-  font-size: 30px
+  font-size: 37px
+  padding: 10px
+  +transition-property(color)
+  +transition-duration(0.5s)
+  &:hover
+    color: #FF0000
 #lastupdate
   width: 100%
   padding: 50px 0px
