--- a/css/main.sass
+++ b/css/main.sass
@@ -11,7 +11,16 @@ time
   font-family: "Simplon_BP_Mono_Regular"
   color: #333
 
-
+.related
+  font-size: 22px
+  h3
+    text-align: center
+    padding: 50px 10px 20px
+    font-size: 14px
+    font-family: "Simplon_BP_Mono_Regular"
+    
+  li
+    padding: 4px
 
 i
   font-size: 37px
@@ -19,7 +28,7 @@ i
   +transition-property(color)
   +transition-duration(0.5s)
   &:hover
-    color: #FF0000
+    color: #000
 #lastupdate
   width: 100%
   padding: 50px 0px
