--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 <ul>
-  <li><a rel="ext" target="_blank" href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
-  <li><a rel="ext" target="_blank" href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
-  <li><a rel="ext" target="_blank" href="http://www.facebook.com/pages/Klangforscher/35528666658">Facebook</a></li>
+  <li><a target="_blank" href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
+  <li><a target="_blank" href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
+  <li><a target="_blank" href="http://www.facebook.com/pages/Klangforscher/35528666658">Facebook</a></li>
 </ul>
 </footer>
