--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer>
 <ul>
-  <li><a target="_blank" href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
+  <li><a href="mailto:info@klangforscher.ch">info@klangforscher.ch</a></li>
   <li><a target="_blank" href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
   <li><a target="_blank" href="http://www.facebook.com/pages/Klangforscher/35528666658">Facebook</a></li>
 </ul>
+<a target="_blank" href="https://github.com/Klangforscher/klangforscher.github.com/commits/master/" id="lastupdate">latest commit: <span id="lastupdatetimestamp">{{ site.time | date: "%d.%m.%Y %H:%M:%S"}}</span></a>
 </footer>
