--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,14 @@ a:hover{color:{{ page.color }}!important;}
 <body>
 {% include header.html %}
 {{ content }}
+{% include nav.html %}
+{% include download.html %}
 {% include footer.html %}
 <script src="/js/vendor/store+json2.min.js"></script>
 <script src="/js/audiojs/audio.min.js"></script>
 <script src="/js/vendor/jquery.js"></script>
 <script src="/js/vendor/screenfull.min.js "></script>
+<script src="/js/vendor/moment.min.js "></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
