new minified jquery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ a:hover{color:{{ page.color }}!important;}
 {% include footer.html %}
 <script src="/js/vendor/store+json2.min.js"></script>
 <script src="/js/audiojs/audio.min.js"></script>
-<script src="/js/vendor/jquery.js"></script>
+<script src="/js/vendor/jquery.min.js"></script>
 <script src="/js/vendor/moment.min.js"></script>
 <script src="/js/main.js"></script>
 </body>
