--- a/css/main.sass
+++ b/css/main.sass
@@ -173,7 +173,8 @@ body
     text-decoration: none
 
 .audiojs
-  display: none
+  //display: none
+  visibility: hidden
 .intro
   padding: 0px 0px 50px
   +transition-property(padding)
