--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -6,15 +6,15 @@ layout: default
 <div class="ui">
   <ul class="actions">
     {% include prevnext.html %}
-    <li><a rel="next" class="next" href="{{ next_post }}"><i class="icon-backward"></i></a></li>
+    <li><a rel="next" class="next" href="{{ next_post.url }}"><i class="icon-backward"></i></a></li>
     <li><a id="shuffle" href="#"><i class="icon-random"></i></a></li>
     <li><a href="/mp3/{{ page.file }}"><i class="icon-download-alt"></i></a></li>
     <li><a id="playbtn" class="ispaused" href="#"><i class="icon-play"></i></a></li>
-    <li><a rel="prev" class="prev" href="{{ prev_post }}"><i class="icon-forward"></i></a></li>
+    <li><a rel="prev" class="prev" href="{{ prev_post.url }}"><i class="icon-forward"></i></a></li>
   </ul>
 </div>
 <div class="content">
 {% include related.html %}
   {{ content }}</div>
-{% if page.file %}<audio src="/mp3/{{ page.file }}" preload="none"></audio>{% endif %}
+{% if page.file %}<audio src="/mp3/{{ page.file }}" preload="auto"></audio>{% endif %}
 
