--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,5 @@
   <li><a target="_blank" href="http://soundcloud.com/klangforscher">Soundcloud</a></li>
   <li><a target="_blank" href="http://www.facebook.com/pages/Klangforscher/35528666658">Facebook</a></li>
 </ul>
-<a target="_blank" href="https://github.com/Klangforscher/klangforscher.github.com/commits/master/" id="lastupdate">latest commit: <span id="lastupdatetimestamp">{{ site.time | date: "%d.%m.%Y %H:%M:%S"}}</span></a>
+<a target="_blank" href="https://github.com/Klangforscher/klangforscher.github.com/commits/master/" id="lastupdate">latest commit: <span id="lastupdatetimestamp">{{ site.time | date: "%d.%m.%Y %H:%M:%S"}}</span><br /><br />erbaut 2013</a>
 </footer>
