--- a/_includes/tracks.html
+++ b/_includes/tracks.html
@@ -1,1 +1,1 @@
-<ul class="tracks">{% for post in site.categories.audio %}<li><a href="{{ post.url }}" >{{ post.title }}<br /><time datetime="{{ post.date | date: "%m-%d-%Y"}}">{{ post.date | date: "%m/%y" }}</time></a></li>{% endfor %}</ul>
+<ul class="tracks">{% for post in site.categories.audio %}<li><a href="{{ post.url }}/" >{{ post.title }}<br /><time datetime="{{ post.date | date: "%m-%d-%Y"}}">{{ post.date | date: "%m/%y" }}</time></a></li>{% endfor %}</ul>
