--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,3 +1,3 @@
 <div class="related">
-{% for tag in page.tags %}<h3>{{ tag }}</h3><ul>{% for post in site.tags[tag] %}<li><a href="{{ post.url }}">{{ post.title }}</a></li>{% endfor %}<ul>
+  {% for tag in page.tags %}<h3>{{ tag }}</h3><ul>{% for post in site.tags[tag] %}{% if post.url != page.url %}<li><a href="{{ post.url }}">{{ post.title }}</a></li>{% endif %}{% endfor %}<ul>
 {% endfor %}</div>
