--- a/_layouts/audio.html
+++ b/_layouts/audio.html
@@ -12,7 +12,7 @@ layout: default
     {% endif %}
     <li><a rel="next" class="next" href="{{ next_post.url }}/"><i class="icon-backward"></i></a></li>
     <li><a id="shuffle" href="#"><i class="icon-random"></i></a></li>
-    <li><a href="/mp3/{{ page.file }}"><i class="icon-download-alt"></i></a></li>
+    <li><a href="/mp3/{{ page.file }}" download><i class="icon-download-alt"></i></a></li>
     <li><a id="playbtn" class="ispaused" href="#"><i class="icon-play"></i></a></li>
     <li><a rel="prev" class="prev" href="{{ prev_post.url }}/"><i class="icon-forward"></i></a></li>
   </ul>
