--- a/_includes/download.html
+++ b/_includes/download.html
@@ -1,6 +1,6 @@
 <div class="downloadwrap">
 <div class="download">
-  <a href="/mp3/klangforscher.zip">Download<br />Everything<br />
+  <a href="/mp3/klangforscher.zip" download>Download<br />Everything<br />
 <span id="duration">05:24:27</span>
     <br />
 <span id="filesize">292 MB</span>
